<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:layout_marginBottom="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_password" />
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:inputType="textPassword"/>
        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="40dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_password_again" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password_again"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/btn_set_password"
        android:layout_marginTop="30dp"/>
</LinearLayout>