<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_restricted_name"
            android:textStyle="bold" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/duration"
            android:textStyle="bold" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/time_left_and_sum"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_app_restricted"
        android:layout_width="wrap_content"
        android:layout_height="400dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/add" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_disable_restriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/disable_restriction" />
    </RelativeLayout>
</LinearLayout>